Implementação da Atividade DTO, em cima do projeto desenvolvido em aula